--- a/app/src/main/res/layout/activity_observatory.xml
+++ b/app/src/main/res/layout/activity_observatory.xml
@@ -2,14 +2,15 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.ObservatoryActivity">
 
     <FrameLayout
         android:id="@+id/observatory_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
-
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
