--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/account"
+        android:id="@+id/photo"
         android:icon="@mipmap/ic_launcher"
-        android:title="My Account" />
+        android:title="@string/navigation_title_photo" />
     <item
-        android:id="@+id/settings"
+        android:id="@+id/asteroid"
         android:icon="@mipmap/ic_launcher"
-        android:title="Settings" />
+        android:title="@string/navigation_title_asteroid" />
     <item
-        android:id="@+id/mycart"
+        android:id="@+id/observatory"
         android:icon="@mipmap/ic_launcher"
-        android:title="My Cart" />
+        android:title="@string/navigation_title_observatory" />
 </menu>
