--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -31,13 +31,13 @@
             tools:text="Moons near Jupiter" />
 
         <TextView
-            android:id="@+id/photo_author_text_view"
+            android:id="@+id/photo_date_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/photo_title_text_view"
-            tools:text="By: Betul Turkaoy" />
+            tools:text="2019-06-01" />
 
         <TextView
             android:id="@+id/photo_description_text_view"
@@ -47,7 +47,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:layout_constraintTop_toBottomOf="@id/photo_author_text_view"
+            app:layout_constraintTop_toBottomOf="@id/photo_date_text_view"
             tools:text="On May 20, a nearly Full Moon and Jupiter shared this telephoto field of view." />
 
     </android.support.constraint.ConstraintLayout>
