--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,13 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="exo_player_height">300dp</dimen>
+    <dimen name="exo_icon_dimensions" tools:ignore="UnusedResources">18dp</dimen>
+    <dimen name="exo_time_bar_dimen" tools:ignore="UnusedResources">32dp</dimen>
+    <dimen name="exo_padding" tools:ignore="UnusedResources">4dp</dimen>
+    <dimen name="exo_text_size" tools:ignore="UnusedResources">14sp</dimen>
 </resources>
