--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/asteroid_image_view"
@@ -16,12 +16,22 @@
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:id="@+id/asteroid_name_label_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/name_label"
+        android:layout_marginLeft="16dp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/asteroid_image_view"
+        app:layout_constraintTop_toTopOf="@id/asteroid_image_view" />
+
+    <TextView
         android:id="@+id/asteroid_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toRightOf="@id/asteroid_image_view"
-        app:layout_constraintTop_toTopOf="@id/asteroid_image_view"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/asteroid_name_label_text_view"
+        app:layout_constraintTop_toTopOf="@id/asteroid_name_label_text_view"
         tools:text="2015 TX237" />
 
     <TextView
@@ -29,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/diameter_label"
-        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_text_view"
+        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_name_text_view" />
 
     <TextView
@@ -38,14 +48,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/asteroid_diameter_label_text_view"
         app:layout_constraintTop_toTopOf="@id/asteroid_diameter_label_text_view"
-        tools:text="58 - 130 m" />
+        tools:text="58 - 130 km" />
 
     <TextView
         android:id="@+id/asteroid_approach_date_label_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/approach_date_label"
-        app:layout_constraintLeft_toLeftOf="@id/asteroid_diameter_label_text_view"
+        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_diameter_label_text_view" />
 
     <TextView
@@ -61,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/velocity_label"
-        app:layout_constraintLeft_toLeftOf="@id/asteroid_approach_date_label_text_view"
+        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_approach_date_label_text_view" />
 
     <TextView
@@ -77,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/read_more_button"
-        app:layout_constraintLeft_toLeftOf="@id/asteroid_velocity_label_text_view"
+        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_velocity_label_text_view" />
 
     <ImageView
@@ -89,5 +99,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/asteroid_name_text_view"
         android:src="@mipmap/ic_launcher" />
-
 </android.support.constraint.ConstraintLayout>
