--- a/app/src/main/res/layout/fragment_asteroid.xml
+++ b/app/src/main/res/layout/fragment_asteroid.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/asteroid_scroll_view"
     android:layout_width="match_parent"
+    android:layout_marginTop="?android:actionBarSize"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
