--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -11,31 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:id="@+id/player_photo_view_frame"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/exo_player_height"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.exoplayer2.ui.PlayerView
-                android:id="@+id/player_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginRight="0dp"
-                app:layout_constraintTop_toTopOf="parent" />
-        </FrameLayout>
-
         <ImageView
             android:id="@+id/photo_view"
             android:layout_width="300dp"
             android:layout_height="@dimen/exo_player_height"
             android:contentDescription="@string/photo_of_the_day_content_description"
-            app:layout_constraintLeft_toLeftOf="@id/player_photo_view_frame"
-            app:layout_constraintRight_toRightOf="@id/player_photo_view_frame"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@mipmap/ic_launcher" />
+
+        <Button
+            android:id="@+id/play_video_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/play_video_button"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/photo_title_text_view" />
 
         <TextView
             android:id="@+id/photo_title_text_view"
@@ -43,7 +36,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/player_photo_view_frame"
+            app:layout_constraintTop_toBottomOf="@id/photo_view"
             tools:text="Moons near Jupiter" />
 
         <TextView
