--- a/app/src/main/res/layout/observatory_list_item.xml
+++ b/app/src/main/res/layout/observatory_list_item.xml
@@ -37,7 +37,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginRight="16dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_info"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/observatory_list_item_name" />
 
