--- a/app/src/main/res/layout/fragment_observatory.xml
+++ b/app/src/main/res/layout/fragment_observatory.xml
@@ -8,15 +8,26 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="?actionBarSize"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/observatory_image_view"
+        <!-- Empty view is only visible when the list has no items-->
+        <TextView
+            android:id="@+id/observatory_empty_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:contentDescription="@string/observatory_content_description"
-            android:src="@mipmap/ic_launcher"
+            android:text="@string/observatory_details_not_found"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/observatory_loading_indicator"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +38,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/observatory_image_view"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Bavarian Public Observatory Munich" />
 
         <TextView
@@ -40,12 +51,31 @@
             tools:text="Rosenheimer Str. 145H, 81671 Munich" />
 
         <TextView
+            android:id="@+id/observatory_phone_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/observatory_address"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="+49 89 406 239"
+            />
+
+        <TextView
             android:id="@+id/observatory_opening_hours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/observatory_address"
+            app:layout_constraintTop_toBottomOf="@id/observatory_phone_number"
+            tools:text="Monday: 9:00 - 11:00 PM, Tuesday: 9:00 - 11:00 PM" />
+
+        <TextView
+            android:id="@+id/observatory_open_now"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/observatory_opening_hours"
             tools:text="Now open, Open from 0 to 24" />
 
         <Button
@@ -55,7 +85,7 @@
             android:text="@string/observatory_visit_homepage_button"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/observatory_opening_hours" />
+            app:layout_constraintTop_toBottomOf="@id/observatory_open_now" />
 
 
     </android.support.constraint.ConstraintLayout>
