--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -2,100 +2,99 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/asteroid_list_item_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/margin_list_item"
+    android:layout_marginBottom="@dimen/margin_list_item">
 
     <ImageView
         android:id="@+id/asteroid_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        style="@style/AsteroidImageViewStyle"
+        android:contentDescription="@string/asteroid_image_content_description"
+        android:src="@drawable/asteroid_image"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/asteroid_image"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/asteroid_name_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AsteroidLabelTextViewStyle"
+        android:layout_marginLeft="@dimen/margin"
         android:text="@string/name_label"
-        android:layout_marginLeft="16dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/asteroid_image_view"
         app:layout_constraintTop_toTopOf="@id/asteroid_image_view" />
 
     <TextView
         android:id="@+id/asteroid_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AsteroidLabelTextViewStyle"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/asteroid_name_label_text_view"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_name_label_text_view"
         tools:text="2015 TX237" />
 
     <TextView
         android:id="@+id/asteroid_diameter_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AsteroidLabelTextViewStyle"
         android:text="@string/diameter_label"
         app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_name_text_view" />
 
     <TextView
         android:id="@+id/asteroid_diameter_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/asteroid_diameter_label_text_view"
+        style="@style/AsteroidLabelTextViewStyle"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_diameter_label_text_view"
         tools:text="58 - 130 km" />
 
     <TextView
         android:id="@+id/asteroid_approach_date_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AsteroidLabelTextViewStyle"
         android:text="@string/approach_date_label"
         app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_diameter_label_text_view" />
 
     <TextView
         android:id="@+id/asteroid_approach_date_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/asteroid_approach_date_label_text_view"
+        style="@style/AsteroidLabelTextViewStyle"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_approach_date_label_text_view"
-        tools:text="2018-Sep-06  12:05" />
+        tools:text="2018-Sep-06" />
 
     <TextView
         android:id="@+id/asteroid_velocity_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AsteroidLabelTextViewStyle"
         android:text="@string/velocity_label"
         app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_approach_date_label_text_view" />
 
     <TextView
         android:id="@+id/asteroid_velocity_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/asteroid_velocity_label_text_view"
+        style="@style/AsteroidLabelTextViewStyle"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_velocity_label_text_view"
         tools:text="13715,74 km/h" />
 
     <Button
         android:id="@+id/asteroid_read_more_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:text="@string/read_more_button"
         app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_velocity_label_text_view" />
 
     <ImageView
         android:id="@+id/asteroid_hazardous_image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginRight="16dp"
+        style="@style/AsteroidImageViewStyle"
+        android:layout_marginRight="@dimen/margin"
         android:contentDescription="@string/asteroid_hazardous_button"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/asteroid_name_text_view"
-        android:src="@mipmap/ic_launcher" />
+        tools:src="@drawable/not_hazardous_image" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="193dp" />
 </android.support.constraint.ConstraintLayout>
