--- a/app/src/main/res/layout/fragment_asteroid.xml
+++ b/app/src/main/res/layout/fragment_asteroid.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout
     android:id="@+id/asteroid_scroll_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="?android:actionBarSize">
@@ -11,13 +11,13 @@
         android:id="@+id/asteroid_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Empty view is only visible when the list has no items-->
     <TextView
         android:id="@+id/asteroid_empty_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/EmptyTextViewStyle"
         android:text="@string/no_asteroids_found"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,10 +25,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
+        style="@style/LoadingIndicatorStyle"
         android:id="@+id/asteroid_loading_indicator"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
