--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -5,6 +5,7 @@
     android:id="@+id/photo_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?actionBarSize"
     tools:ignore="Overdraw">
 
     <android.support.constraint.ConstraintLayout
@@ -13,8 +14,7 @@
 
         <ImageView
             android:id="@+id/photo_view"
-            android:layout_width="@dimen/exo_player_height"
-            android:layout_height="@dimen/exo_player_height"
+            style="@style/PhotoImageView"
             android:contentDescription="@string/photo_of_the_day_content_description"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -23,17 +23,17 @@
 
         <Button
             android:id="@+id/play_video_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ButtonStyle"
             android:text="@string/play_video_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/photo_title_text_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/photo_title_text_view" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/photo_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/PhotoTitleTextView"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/photo_view"
@@ -41,8 +41,7 @@
 
         <TextView
             android:id="@+id/photo_empty_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/EmptyTextViewStyle"
             android:text="@string/no_photo_found"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -51,9 +50,7 @@
 
         <ProgressBar
             android:id="@+id/photo_loading_indicator"
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/LoadingIndicatorStyle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -61,8 +58,7 @@
 
         <TextView
             android:id="@+id/photo_date_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/SubtitleTextView"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/photo_title_text_view"
@@ -70,14 +66,10 @@
 
         <TextView
             android:id="@+id/photo_description_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
+            style="@style/PhotoDescriptionTextView"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/photo_date_text_view"
             tools:text="On May 20, a nearly Full Moon and Jupiter shared this telephoto field of view." />
-
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
