--- a/app/src/main/res/layout/observatory_list_item.xml
+++ b/app/src/main/res/layout/observatory_list_item.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/observatory_list_item_constraint_layout"
     android:layout_width="match_parent"
-    android:layout_marginTop="?android:actionBarSize"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/margin"
+    android:layout_marginTop="@dimen/margin_list_item"
+    android:layout_marginBottom="@dimen/margin_list_item">
 
     <TextView
         android:id="@+id/observatory_list_item_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
+        style="@style/ObservatoryListItemTitleStyle"
+        android:paddingRight="@dimen/observatory_list_item_margin"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Bavarian Public Observatory Munich" />
 
     <TextView
         android:id="@+id/observatory_list_item_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
+        style="@style/ObservatoryListItemSubtitleStyle"
+        android:paddingRight="@dimen/observatory_list_item_margin"
         app:layout_constraintLeft_toLeftOf="@id/observatory_list_item_name"
         app:layout_constraintTop_toBottomOf="@id/observatory_list_item_name"
         tools:text="Rosenheimer Str. 160H" />
 
     <TextView
         android:id="@+id/observatory_list_item_opening_Hours"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
+        style="@style/ObservatoryListItemSubtitleStyle"
+        android:paddingRight="@dimen/observatory_list_item_margin"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintLeft_toLeftOf="@id/observatory_list_item_address"
         app:layout_constraintTop_toBottomOf="@id/observatory_list_item_address"
-        tools:text="Opens at 17:00" />
+        tools:text="Open now" />
 
     <ImageButton
         android:id="@+id/observatory_list_item_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginRight="16dp"
-        android:src="@drawable/ic_info"
+        style="@style/ObservatoryImageViewStyle"
+        android:layout_marginRight="@dimen/margin"
+        android:background="@color/colorPrimary"
+        android:contentDescription="@string/observatory_list_item_button_content_description"
+        android:src="@drawable/ic_action_info"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/observatory_list_item_name" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
