--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="exo_player_height">200dp</dimen>
+    <dimen name="photo_dimensions">250dp</dimen>
+    <dimen name="margin_list_item">8dp</dimen>
+    <dimen name="image_dimensions">48dp</dimen>
+    <dimen name="observatory_list_item_margin">72dp</dimen>
+    <dimen name="map_fragment_height">300dp</dimen>
 </resources>
