--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -14,8 +14,9 @@
         android:id="@+id/asteroid_image_view"
         style="@style/AsteroidImageViewStyle"
         android:contentDescription="@string/asteroid_image_content_description"
+        android:padding="@dimen/margin_list_item"
         android:src="@drawable/asteroid_image"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -24,14 +25,14 @@
         android:layout_marginLeft="@dimen/margin"
         android:text="@string/name_label"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/asteroid_image_view"
+        app:layout_constraintStart_toEndOf="@id/asteroid_image_view"
         app:layout_constraintTop_toTopOf="@id/asteroid_image_view" />
 
     <TextView
         android:id="@+id/asteroid_name_text_view"
         style="@style/AsteroidLabelTextViewStyle"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_name_label_text_view"
         tools:text="2015 TX237" />
 
@@ -45,7 +46,7 @@
     <TextView
         android:id="@+id/asteroid_diameter_text_view"
         style="@style/AsteroidLabelTextViewStyle"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_diameter_label_text_view"
         tools:text="58 - 130 km" />
 
@@ -53,13 +54,13 @@
         android:id="@+id/asteroid_approach_date_label_text_view"
         style="@style/AsteroidLabelTextViewStyle"
         android:text="@string/approach_date_label"
-        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
+        app:layout_constraintStart_toStartOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_diameter_label_text_view" />
 
     <TextView
         android:id="@+id/asteroid_approach_date_text_view"
         style="@style/AsteroidLabelTextViewStyle"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_approach_date_label_text_view"
         tools:text="2018-Sep-06" />
 
@@ -67,13 +68,13 @@
         android:id="@+id/asteroid_velocity_label_text_view"
         style="@style/AsteroidLabelTextViewStyle"
         android:text="@string/velocity_label"
-        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
+        app:layout_constraintStart_toStartOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_approach_date_label_text_view" />
 
     <TextView
         android:id="@+id/asteroid_velocity_text_view"
         style="@style/AsteroidLabelTextViewStyle"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/asteroid_velocity_label_text_view"
         tools:text="13715,74 km/h" />
 
@@ -81,15 +82,15 @@
         android:id="@+id/asteroid_read_more_button"
         style="@style/ButtonStyle"
         android:text="@string/read_more_button"
-        app:layout_constraintLeft_toLeftOf="@id/asteroid_name_label_text_view"
+        app:layout_constraintStart_toStartOf="@id/asteroid_name_label_text_view"
         app:layout_constraintTop_toBottomOf="@id/asteroid_velocity_label_text_view" />
 
     <ImageView
         android:id="@+id/asteroid_hazardous_image"
         style="@style/AsteroidImageViewStyle"
-        android:layout_marginRight="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
         android:contentDescription="@string/asteroid_hazardous_button"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/asteroid_name_text_view"
         tools:src="@drawable/not_hazardous_image" />
 
