--- a/app/src/main/res/layout/fragment_asteroid.xml
+++ b/app/src/main/res/layout/fragment_asteroid.xml
@@ -25,6 +25,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/asteroid_empty_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/asteroid_empty_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="@dimen/margin"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_nothing_found"
+        />
+
+
     <ProgressBar
         style="@style/LoadingIndicatorStyle"
         android:id="@+id/asteroid_loading_indicator"
