--- a/app/src/main/res/layout/fragment_asteroid.xml
+++ b/app/src/main/res/layout/fragment_asteroid.xml
@@ -1,48 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    android:id="@+id/asteroid_scroll_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/asteroid_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/fragment_margin_start"
     android:layout_marginTop="?android:actionBarSize">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/asteroid_recycler_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content">
 
-    <!-- Empty view is only visible when the list has no items-->
-    <TextView
-        android:id="@+id/asteroid_empty_text_view"
-        style="@style/EmptyTextViewStyle"
-        android:text="@string/no_asteroids_found"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/asteroid_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/asteroid_empty_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/asteroid_empty_text_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingBottom="@dimen/margin"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_nothing_found"
-        />
+        <!-- Empty view is only visible when the list has no items-->
+        <TextView
+            android:id="@+id/asteroid_empty_text_view"
+            style="@style/EmptyTextViewStyle"
+            android:layout_centerInParent="true"
+            android:text="@string/no_asteroids_found" />
 
+        <ImageView
+            android:id="@+id/asteroid_empty_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/asteroid_empty_text_view"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@null"
+            android:paddingBottom="@dimen/margin"
+            android:src="@drawable/ic_nothing_found" />
 
-    <ProgressBar
-        style="@style/LoadingIndicatorStyle"
-        android:id="@+id/asteroid_loading_indicator"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/asteroid_loading_indicator"
+            style="@style/LoadingIndicatorStyle"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
